# crispy-disco

./: template.yaml  test.sh
.github/files/: lambda.yaml
.github/workflows/: ci.yml  test.yml
server/: Cargo.toml  Dockerfile
server/src/: main.rs
