[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
anyhow = "1.0.79"
lambda-web = { version = "0.2.1", features = ["actix4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
strip = "debuginfo"
